crates/oxc_react_compiler/tests/snapshots/repro-for-in-in-try.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-for-in-in-try.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support value blocks (conditional, logical, optional chaining, etc) within a try/catch statement", labels: One([LabeledSpan { label: None, span: SourceSpan { offset: SourceOffset(53), length: 52 }, primary: false }]), help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
