crates/oxc_react_compiler/tests/snapshots/repro-hoisting-variable-collision.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-hoisting-variable-collision.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props.items) {
		t0 = props.items.map(_temp);
		$[0] = props.items;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const items = t0;
	let t1;
	if ($[2] !== items) {
		t1 = [42, items];
		$[2] = items;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
function _temp(x) {
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ items: [
		0,
		42,
		null,
		undefined,
		{ object: true }
	] }]
};
